# wedder

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  log4rs.yaml
.github/workflows/: ci.yml  make.yml  release.yml
config/: currweather.toml  polybar  wedder.toml
example/: polybar  wedder.toml
examples/: polybar  wedder.toml
src/: app.rs  config.rs  http.rs  lib.rs  logger.rs  main.rs  settings.rs
src/adapters/: http.rs  mod.rs
src/adapters/config/: cli_args.rs  file.rs  mod.rs
src/adapters/location/: ip_api.rs  manual.rs  mod.rs
src/adapters/weather/: mod.rs  owm.rs
src/config/: cli_args.rs  cmd_args.rs  file.rs  mod.rs  tests.rs  units.rs
src/location/: geoclue.rs  ip_api.rs  manual.rs  mod.rs  tests.rs
src/model/: config.rs  location.rs  mod.rs  weather.rs
src/services/: config_service.rs  format_service.rs  location_service.rs  mod.rs  weather_service.rs
src/util/: mod.rs
src/weather/: error.rs  formatter.rs  mod.rs  owm.rs  weather.rs  weather_condition.rs  weather_status.rs
src/weather/owm/: mod.rs  response.rs
src/weather/providers/: mod.rs  owm.rs
src/weather/providers/owm/: mock.rs  mod.rs  response.rs  tests.rs
tests/: air_pollution.json  args.rs  common.rs  current.json  format.rs  one_call.json  tests.rs
