[package]
name = "wedder"
version = "1.3.0"
description = "Current weather info for status bars like polybar"
authors = ["Adrian Wersching <awersching@posteo.de>"]
edition = "2018"

[features]
# Workaround for integration tests not getting cfg(test)
# https://github.com/rust-lang/cargo/issues/4669
test = ["assert_cmd", "serde_json"]

[dependencies]
reqwest = { version = "0.11.5", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
structopt = "0.3.23"
strum = "0.22.0"
strum_macros = "0.22.0"
directories = "4.0.1"
chrono = "0.4.19"
log = "0.4.14"
log4rs = "1.0.0"

assert_cmd = { version = "2.0.2", optional = true }
serde_json = { version = "1.0.68", optional = true }
