[package]
name = "wedder"
version = "1.4.0"
description = "Current weather info for status bars like polybar"
authors = ["Adrian Wersching <awersching@posteo.de>"]
edition = "2021"

[features]
# Workaround for integration tests not getting cfg(test)
# https://github.com/rust-lang/cargo/issues/4669
test = ["assert_cmd", "serde_json"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
structopt = "0.3.26"
strum = "0.26.3"
strum_macros = "0.26.4"
directories = "5.0.1"
chrono = "0.4.39"
log = "0.4.22"
log4rs = "1.3.0"

assert_cmd = { version = "2.0.16", optional = true }
serde_json = { version = "1.0.134", optional = true }
